remove unnecessary `@QuarkusTest`